--- a/www/index.html
+++ b/www/index.html
@@ -58,85 +58,74 @@
 
 
 <script id="plenary-tpl" type="text/x-handlebars-template">
-		<div class="plenary-tpl" style="height: 93%; overflow: auto;">
-			<div class="bar bar-header">
-				<button class="back-btn button button-icon" onclick="javascript:history.back(1)">
-					<img src="assets/img/back-arrow.png" alt="ico" class="ico">
-				</button>
-				<h1 class="title">Пленарни заседания</h1>
-				<button class="search-btn button button-icon" id="btnSearchPlenary">
-					<img src="assets/img/search-icon.png" alt="ico" class="ico">
-				</button>
-			</div>
+	<div class="plenary-tpl" style="height: 93%; overflow: auto;">
+		<div class="bar bar-header">
+			<button class="back-btn button button-icon" onclick="javascript:history.back(1)">
+				<img src="assets/img/back-arrow.png" alt="ico" class="ico">
+			</button>
+			<h1 class="title">Пленарни заседания</h1>
+			<button class="search-btn button button-icon" id="btnSearchPlenary">
+				<img src="assets/img/search-icon.png" alt="ico" class="ico">
+			</button>
+		</div>
 
-			<div class="row search-row">
-				<div class="col hidden" id="searchBoxPlenary">
-					<div class="search-wrapper">
-						<input type="text" placeholder="Търси заседание" class="search-field" />
-					</div>
+		<div class="row search-row">
+			<div class="col hidden" id="searchBoxPlenary">
+				<div class="search-wrapper">
+					<input type="text" placeholder="Търси заседание" class="search-field" id="txtSearchPlenary" />
 				</div>
-			</div>
-
-			<div class="row">
-				<div class="col content-wrapper">
-					{{#each plenary}}
-					<div class="row short-preview">
-						<div class="col-67 description">
-							{{{dscrShort}}}
-						</div>
-						<div class="col-33">
-							<div class="custom-row">
-								<div class="date">{{startDate}}</div>
-							</div>
-							<div class="custom-row">
-								<button class="button icon-left ion-eye preview-btn" onclick="openAppUrl('#plenaryDetail?id={{id}}');">
-									<span class="txt">Преглед</span>
-								</button>
-							</div>
-						</div>
-					</div>
-					{{/each}}
-				</div>
-			</div>
-					<!-- Remove it - testing data -->
-					<!-- <div class="row short-preview">
-						<div class="col-67 description">
-							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-						</div>
-						<div class="col-33">
-							<div class="custom-row">
-								<div class="date">12.04.2014</div>
-							</div>
-							<div class="custom-row">
-								<button class="button icon-left ion-eye preview-btn"onclick="openAppUrl('#plenaryDetail?id=1');"><span class="txt">Преглед</span></button>
-							</div>
-						</div>
-					</div> -->
-					<!-- /Remove it - testing data -->
-
-			<div class="tabs tabs-icon-top bottom-tabs">
-				<a class="tab-item active" href="#plenary">
-					<i class="icon"><img src="assets/img/plenary-ico-dark.svg" class="section-icons plenary-ico"></i>
-					П. заседания
-				</a>
-				<a class="tab-item" href="#controll">
-					<i class="icon"><img src="assets/img/controll-ico-dark.svg" class="section-icons controll-ico"></i>
-					П. Контрол
-				</a>
-				<a class="tab-item" href="#committee">
-					<i class="icon"><img src="assets/img/committee-ico-dark.svg" class="section-icons committee-ico"></i>
-					П. Комисии
-				</a>
-				<a class="tab-item" href="#news">
-					<i class="icon"><img src="assets/img/news-ico-dark.svg" class="section-icons news-ico"></i>
-					Новини
-				</a>
-				<a class="tab-item" href="#options">
-					<i class="icon ion-gear-a"></i>
-					Настройки
-				</a>
 			</div>
 		</div>
+
+		<div class="row">
+			<div class="col content-wrapper">
+				{{#each plenary}}
+				<div class="row short-preview plenariesListItem" data-list-item-id="{{pid}}">
+					<div class="col-67 description">
+						{{{dscrShort}}}
+					</div>
+					<div class="col-33">
+						<div class="custom-row">
+							<div class="date">{{startDate}}</div>
+							{{#ifCond startDate endDate}}
+							{{else}}
+								<div class="date">{{endDate}}</div>
+							{{/ifCond}}
+						</div>
+						<div class="custom-row">
+							<button class="button icon-left ion-eye preview-btn" onclick="openAppUrl('#plenaryDetail?id={{pid}}');">
+								<span class="txt">Преглед</span>
+							</button>
+						</div>
+					</div>
+				</div>
+				{{/each}}
+			</div>
+		</div>
+
+		<div class="tabs tabs-icon-top bottom-tabs">
+			<a class="tab-item active" href="#plenary">
+				<i class="icon"><img src="assets/img/plenary-ico-dark.svg" class="section-icons plenary-ico"></i>
+				П. заседания
+			</a>
+			<a class="tab-item" href="#controll">
+				<i class="icon"><img src="assets/img/controll-ico-dark.svg" class="section-icons controll-ico"></i>
+				П. Контрол
+			</a>
+			<a class="tab-item" href="#committee">
+				<i class="icon"><img src="assets/img/committee-ico-dark.svg" class="section-icons committee-ico"></i>
+				П. Комисии
+			</a>
+			<a class="tab-item" href="#news">
+				<i class="icon"><img src="assets/img/news-ico-dark.svg" class="section-icons news-ico"></i>
+				Новини
+			</a>
+			<a class="tab-item" href="#options">
+				<i class="icon ion-gear-a"></i>
+				Настройки
+			</a>
+		</div>
+	</div>
 </script>
 
 
@@ -219,7 +208,7 @@
 		<div class="row search-row">
 			<div class="col hidden" id="searchBoxControll">
 				<div class="search-wrapper">
-					<input type="text" placeholder="Търси парламентарен контрол" class="search-field" />
+					<input type="text" placeholder="Търси парламентарен контрол" class="search-field" id="txtSearchControll" />
 				</div>
 			</div>
 		</div>
@@ -227,7 +216,7 @@
 		<div class="row">
 			<div class="col content-wrapper">
 				{{#each controll}}
-				<div class="row short-preview">
+				<div class="row short-preview controllListItem" data-list-item-id="{{cid}}">
 					<div class="col">
 						<!--<div class="row">
 							<h2 class="title">Парламентарен контрол</h2>
@@ -241,7 +230,7 @@
 									<div class="date">{{date}}</div>
 								</div>
 								<div class="custom-row">
-									<button class="button icon-left ion-eye preview-btn" onclick="openAppUrl('#controllDetail?id={{id}}');">
+									<button class="button icon-left ion-eye preview-btn" onclick="openAppUrl('#controllDetail?id={{cid}}');">
 										<span class="txt">Преглед</span>
 									</button>
 								</div>
@@ -362,7 +351,7 @@
 		<div class="row search-row">
 			<div class="col hidden" id="searchBoxCommittee">
 				<div class="search-wrapper">
-					<input type="text" placeholder="Търси заседание" class="search-field" />
+					<input type="text" placeholder="Търси заседание" class="search-field" id="txtSearchCommittee" />
 				</div>
 			</div>
 		</div>
@@ -370,7 +359,7 @@
 		<div class="row">
 			<div class="col content-wrapper">
 				{{#each committee}}			
-				<div class="row short-preview">
+				<div class="row short-preview committeeListItem" data-list-item-id="{{cid}}">
 					<div class="col">
 						<div class="row">
 							<h2 class="title">{{committeeName}}</h2>
@@ -384,7 +373,7 @@
 									<div class="date">{{date}}</div>
 								</div>
 								<div class="custom-row">
-									<button class="button icon-left ion-eye preview-btn" onclick="openAppUrl('#committeeDetail?id={{id}}');">
+									<button class="button icon-left ion-eye preview-btn" onclick="openAppUrl('#committeeDetail?id={{cid}}');">
 										<span class="txt">Преглед</span>
 									</button>
 								</div>
@@ -485,28 +474,136 @@
 	</div>
 </script>
 
-	
-		<script id="news-tpl" type="text/x-handlebars-template">
-			<div class="topcoat-navigation-bar" style="height: 80px;">
-				<div class="topcoat-navigation-bar__item center full" style="line-height: 40px;">
-					<button class="topcoat-icon-button" onclick="javascript:history.back(1)" style="float: left; margin-top: 15px;">
-						<span class="topcoat-icon" style="background-color:#A5A7A7;"></span>
-					</button>
-					<h1 class="topcoat-navigation-bar__title">Народно събрание<br />Новини</h1>
+<script id="news-tpl" type="text/x-handlebars-template">
+	<div class="news-tpl" style="height: 93%; overflow: auto;">
+		<div class="bar bar-header">
+			<button class="back-btn button button-icon" onclick="javascript:history.back(1)">
+				<img src="assets/img/back-arrow.png" alt="ico" class="ico">
+			</button>
+			<h1 class="title">Новини</h1>
+			<button class="search-btn button button-icon" id="btnSearchNews">
+				<img src="assets/img/search-icon.png" alt="ico" class="ico">
+			</button>
+		</div>
+
+		<div class="row search-row">
+			<div class="col hidden" id="searchBoxNews">
+				<div class="search-wrapper">
+					<input type="text" placeholder="" class="search-field" id="txtSearchNews" />
 				</div>
 			</div>
-			<div class="committee-content">
+		</div>
+
+		<div class="row">
+			<div class="col content-wrapper">
 				{{#each news}}
-				<div class="topcoat-list">
-					<h3 class="topcoat-list__header">
-						<a href='javascript:' onclick="openUrlInExternal('{{link}}')">{{title}}</a>
-					</h3>
-					<p class="topcoat-list__item">{{{dscr}}}</p>
-					<h3 class="topcoat-list__header">{{pubDate}}</h3>
+				<div class="row short-preview newsListItem" data-list-item-id="{{nid}}">
+					<div class="col">
+						<div class="row">
+							<h2 class="title">{{title}}</h2>
+						</div>
+						<div class="row">
+							<div class="col">
+								<div class="date">{{pubDate}}</div>
+							</div>
+							<div class="col">
+								<button class="button icon-left ion-eye preview-btn" onclick="openAppUrl('#newsDetail?id={{nid}}');">
+									<span class="txt">Преглед</span>
+								</button>
+							</div>
+						</div>
+					</div>
 				</div>
 				{{/each}}
 			</div>
-		</script>
+		</div>
+
+		<div class="tabs tabs-icon-top bottom-tabs">
+			<a class="tab-item" href="#plenary">
+				<i class="icon"><img src="assets/img/plenary-ico-dark.svg" class="section-icons plenary-ico"></i>
+				П. заседания
+			</a>
+			<a class="tab-item" href="#controll">
+				<i class="icon"><img src="assets/img/controll-ico-dark.svg" class="section-icons controll-ico"></i>
+				П. Контрол
+			</a>
+			<a class="tab-item" href="#committee">
+				<i class="icon"><img src="assets/img/committee-ico-dark.svg" class="section-icons committee-ico"></i>
+				П. Комисии
+			</a>
+			<a class="tab-item active" href="#news">
+				<i class="icon"><img src="assets/img/news-ico-dark.svg" class="section-icons news-ico"></i>
+				Новини
+			</a>
+			<a class="tab-item" href="#options">
+				<i class="icon ion-gear-a"></i>
+				Настройки
+			</a>
+		</div>
+
+	</div>
+</script>
+
+<script id="news-tpl-detail-preview" type="text/x-handlebars-template">
+	<div class="news-tpl-detail-preview" style="height: 93%; overflow: auto;">
+		<div class="bar bar-header">
+			<button class="back-btn button button-icon" onclick="javascript:history.back(1)">
+				<img src="assets/img/back-arrow.png" alt="ico" class="ico">
+			</button>
+			<h1 class="title">Преглед на новина</h1>
+		</div>
+
+		<div class="row screen-wrapper">
+			<div class="col content-wrapper">
+				<div class="row detail-preview">
+					<div class="col">
+						<div class="row">
+							<h2 class="title">{{title}}</h2>
+						</div>
+						<div class="row">
+							<div class="custom-row">
+								<div class="date">{{pubDate}}</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col description">
+								<img src="http://www.parliament.bg/pub/Gallery/{{img}}">
+								{{{dscr}}}</br>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="tabs tabs-icon-top bottom-tabs">
+			<a class="tab-item" href="#plenary">
+				<i class="icon"><img src="assets/img/plenary-ico-dark.svg" class="section-icons plenary-ico"></i>
+				П. заседания
+			</a>
+			<a class="tab-item" href="#controll">
+				<i class="icon"><img src="assets/img/controll-ico-dark.svg" class="section-icons controll-ico"></i>
+				П. Контрол
+			</a>
+			<a class="tab-item" href="#committee">
+				<i class="icon"><img src="assets/img/committee-ico-dark.svg" class="section-icons committee-ico"></i>
+				П. Комисии
+			</a>
+			<a class="tab-item active" href="#news">
+				<i class="icon"><img src="assets/img/news-ico-dark.svg" class="section-icons news-ico"></i>
+				Новини
+			</a>
+			<a class="tab-item" href="#options">
+				<i class="icon ion-gear-a"></i>
+				Настройки
+			</a>
+		</div>
+
+	</div>
+</script>
+
+
+	
 	
 
 <script type="text/javascript" src="js/tools.js"></script>
