--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -507,8 +507,9 @@
 
 		<div class="row screen-wrapper">
 			<div class="col content-wrapper">
+
 				{{#each commsList}}
-				<div class="row short-preview committeeListItem">
+				<div class="row short-preview">
 					<div class="col">
 						<div class="row relative">
 							<div class="col description">
@@ -524,6 +525,7 @@
 					</div>
 				</div>
 				{{/each}}
+
 			</div>
 		</div>
 
@@ -676,13 +678,17 @@
 <script src="lib/fastclick.js"></script>
 <script src="lib/handlebars.js"></script>
 <script src="lib/pageslider.js"></script>
+
 <script src="js/adapters/FileStorage.js"></script>
+<script src="js/AppSettings.js"></script>
 <script src="js/HomeView.js"></script>
 <script src="js/PlenaryView.js"></script>
 <script src="js/ControllView.js"></script>
 <script src="js/CommitteeView.js"></script>
 <script src="js/CommitteesListView.js"></script>
 <script src="js/NewsView.js"></script>
+
+<!-- keep this last in import list because it uses most of above scripts and executes on include -->
 <script src="js/app.js"></script>
 
 </body>
