--- a/www/index.html
+++ b/www/index.html
@@ -4,10 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	
-	<link rel="stylesheet" type="text/css" href="assets/css/ionic.min.css">
-	<link href="assets/css/styles.css" rel="stylesheet">
-	<link href="assets/css/pageslider.css" rel="stylesheet">
-	<link href="assets/css/app_effects.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="assets/css/ionic.min.css" />
+	<link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
+	<link rel="stylesheet" type="text/css" href="assets/css/pageslider.css" />
+	<link rel="stylesheet" type="text/css" href="assets/css/app_effects.css" />
+	<link rel="stylesheet" type="text/css" href="assets/css/snap.css" />
 </head>
 <body>
 
@@ -735,6 +736,7 @@
 <script src="lib/fastclick.js"></script>
 <script src="lib/handlebars.js"></script>
 <script src="lib/pageslider.js"></script>
+<script src="lib/snap.js"></script>
 
 <script src="js/adapters/FileStorage.js"></script>
 <script src="js/AppSettings.js"></script>
