--- a/www/index.html
+++ b/www/index.html
@@ -14,14 +14,6 @@
 
 <script id="home-tpl" type="text/x-handlebars-template">
    	<div class="home-tpl">
-		<div class="row">
-			<div class="col center">
-				<a href="#mpsList" class="default-btn news-btn">
-					<img src="assets/img/news-ico-light.svg" alt="ico" class="ico">
-					<span class="txt">Народни представители</span>
-				</a>
-			</div>
-		</div>
 		<div class="row armorial-wrapper">
 			<div class="col">
 				<img src="assets/img/bulgarian-armorial.svg" class="armorial">
@@ -29,6 +21,14 @@
 				<span>Народно събрание на</span></br>
 				Република България
 				</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col center">
+				<a href="#mpsAZList" class="default-btn news-btn">
+					<img src="assets/img/news-ico-light.svg" alt="ico" class="ico">
+					<span class="txt">Народни представители AZ</span>
+				</a>
 			</div>
 		</div>
 		<div class="row">
@@ -898,6 +898,81 @@
 </script>
 
 
+<script id="mps-az-tpl" type="text/x-handlebars-template">
+	<div class="mps-az-tpl" style="height: 93%; overflow: auto;">
+		<div class="bar bar-header">
+			<button class="back-btn button button-icon" onclick="javascript:openAppUrl('#home')">
+				<img src="assets/img/back-arrow.png" alt="ico" class="ico">
+			</button>
+			<h1 class="title">Народни представители A-Z</h1>
+			<button class="search-btn button button-icon" id="btnSearchMpsAZ">
+				<img src="assets/img/search-icon.png" alt="ico" class="ico">
+			</button>
+		</div>
+
+		<div class="row search-row">
+			<div class="col hidden" id="searchBoxMpsAZ">
+				<div class="search-wrapper">
+					<input type="text" placeholder="" class="search-field" id="txtSearchMpsAZ" />
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col content-wrapper">
+				{{#each bills}}
+				<div class="row short-preview billsListItem" data-list-item-id="{{mpid}}">
+					<div class="col">
+						<div class="row" onclick="openAppUrl('#billsDetail?id={{mpid}}');">
+							<h2 class="title">{{billName}}</h2>
+						</div>
+						<div class="row">
+							<div class="col-67 description">
+								Вносители:<br />
+								{{{importersShort}}}
+							</div>
+							<div class="col-33">
+								<div class="custom-row">
+									<div class="date">{{billDate}}</div>
+								</div>
+								<div class="custom-row">
+									<button class="button icon-left ion-eye preview-btn" onclick="openAppUrl('#mpDetailUrl?id={{mpid}}');">
+										<span class="txt">Преглед</span>
+									</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				{{/each}}
+			</div>
+		</div>
+
+		<div class="tabs tabs-icon-top bottom-tabs">
+			<a class="tab-item" href="#plenary">
+				<i class="icon"><img src="assets/img/plenary-ico-dark.svg" class="section-icons plenary-ico"></i>
+				П. заседания
+			</a>
+			<a class="tab-item" href="#controll">
+				<i class="icon"><img src="assets/img/controll-ico-dark.svg" class="section-icons controll-ico"></i>
+				П. Контрол
+			</a>
+			<a class="tab-item" href="#committee">
+				<i class="icon"><img src="assets/img/committee-ico-dark.svg" class="section-icons committee-ico"></i>
+				П. Комисии
+			</a>
+			<a class="tab-item" href="#news">
+				<i class="icon"><img src="assets/img/news-ico-dark.svg" class="section-icons news-ico"></i>
+				Новини
+			</a>
+			<a class="tab-item active" href="#options">
+				<i class="icon ion-gear-a"></i>
+				Настройки
+			</a>
+		</div>
+
+	</div>
+</script>
 
 
 
