--- a/www/staticHTML.html
+++ b/www/staticHTML.html
@@ -12,6 +12,9 @@
         <link rel="stylesheet" type="text/css" href="assets/css/snap.css" />
 		
         <title>Static Parliament App HTML</title>
+        
+		<script src="lib/jquery.js"></script>
+
     </head>
     <body>
 
@@ -1171,10 +1174,18 @@
         </div>
 		<script src="lib/snap.js"></script>
         <script type="text/javascript">
-            var snapper = new Snap({
-                element: document.getElementById('content'),
-                disable: 'right'
-            });
+			var snapper = new Snap({
+				element: document.getElementById('content'),
+				disable: 'right'
+			});
+
+			$('#open-left').unbind().bind('click', function() {
+				if (snapper.state().state == "left") {
+					snapper.close();
+				} else {
+					snapper.open('left');
+				}
+			})
         </script>
 
     </body>
